--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-countdown": "^10.0.1",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
+    "rxjs-observable-store": "^3.0.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
